--- a/app/views/staff/activities/historic.html.haml
+++ b/app/views/staff/activities/historic.html.haml
@@ -7,7 +7,7 @@
         = t("page_title.activity.index")
 
   - if current_user.service_owner?
-    = render partial: "staff/shared/activities/filter", locals: { organisation_id: @organisation_id }
+    = render partial: "staff/shared/activities/filter", locals: { organisation_id: @organisation.id }
 
   .govuk-grid-row
     .govuk-grid-column-full
@@ -18,36 +18,16 @@
         %ul.govuk-tabs__list
           %li.govuk-tabs__list-item
             = link_to t("tabs.activities.current"),
-              activities_path(organisation_id: @organisation_id),
+              activities_path(organisation_id: @organisation.id),
               { class: "govuk-tabs__tab", role: "tab", aria: { controls: "current", selected: false } }
 
           %li.govuk-tabs__list-item.govuk-tabs__list-item--selected
             = link_to t("tabs.activities.historic"),
-              historic_activities_path(organisation_id: @organisation_id),
+              historic_activities_path(organisation_id: @organisation.id),
               { class: "govuk-tabs__tab", role: "tab", aria: { controls: "historic", selected: true } }
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
             = t("page_title.activities.historic")
 
-          %table.govuk-table.activities
-            %thead.govuk-table__head
-              %tr.govuk-table__row
-                %th.govuk-table__header
-                  = t("table.header.activity.title")
-                %th.govuk-table__header
-                  = t("table.header.activity.identifier")
-                %th.govuk-table__header
-                  = t("table.header.activity.level")
-                %th.govuk-table__header
-
-            %tbody.govuk-table__body
-              - @historic_activity_presenters.each do |activity|
-                %tr.govuk-table__row{ id: activity.id }
-                  %td.govuk-table__cell= activity.display_title
-                  %td.govuk-table__cell= activity.roda_identifier
-                  %td.govuk-table__cell= activity.level
-                  %td.govuk-table__cell
-                    = a11y_action_link t("table.body.activity.view_activity"),
-                      organisation_activity_path(activity.organisation, activity),
-                      activity.title
+          = render partial: "staff/shared/activities/tree_view/table", locals: { grouped_programmes: @grouped_programmes }
